[gd_scene load_steps=13 format=3 uid="uid://cv5fl4u3g5qt0"]

[ext_resource type="Script" path="res://region/player/player.gd" id="1_x11yn"]
[ext_resource type="PackedScene" uid="uid://b5sf47hidcrx3" path="res://region/player/hand.tscn" id="2_07mmo"]
[ext_resource type="PackedScene" uid="uid://cgcjsya36h4mj" path="res://region/player/discard.tscn" id="3_opu1m"]
[ext_resource type="PackedScene" uid="uid://b55nox8beoheo" path="res://region/player/pack.tscn" id="4_mihwp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gkj7y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xeixi"]
resource_local_to_scene = true

[sub_resource type="SphereMesh" id="SphereMesh_nnlib"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_xeixi")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wqho0"]

[sub_resource type="SphereMesh" id="SphereMesh_r86on"]
material = SubResource("StandardMaterial3D_wqho0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2gnm"]
emission_enabled = true
emission = Color(0.843137, 0.843137, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_nst5r"]
material = SubResource("StandardMaterial3D_y2gnm")

[sub_resource type="PlaneMesh" id="PlaneMesh_f58ka"]

[node name="Player" type="Node3D"]
script = ExtResource("1_x11yn")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.324511)
mesh = SubResource("CapsuleMesh_gkj7y")

[node name="Head" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25066, -0.279437)
mesh = SubResource("SphereMesh_nnlib")
skeleton = NodePath("../..")

[node name="Eye1" type="MeshInstance3D" parent="Body/Head"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.200912, -0.077364, -0.456755)
mesh = SubResource("SphereMesh_r86on")

[node name="Eye2" type="MeshInstance3D" parent="Body/Head"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.199088, -0.077364, -0.456755)
mesh = SubResource("SphereMesh_r86on")

[node name="Hand" parent="." instance=ExtResource("2_07mmo")]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0.326501, -1.3325)

[node name="Discard" parent="." instance=ExtResource("3_opu1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.11495, 0, -0.344619)

[node name="Pack" parent="." instance=ExtResource("4_mihwp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.40211, 0, -1.17901)

[node name="Pointer" type="MeshInstance3D" parent="."]
transform = Transform3D(0.399233, 0, 0, 0, -0.392946, 0, 0, 0, 0.123149, 0, 2.34065, 0.052591)
mesh = SubResource("PrismMesh_nst5r")

[node name="InfoPanel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.957504, 1.18363)
mesh = SubResource("PlaneMesh_f58ka")

[node name="InfoLabel" type="Label3D" parent="InfoPanel"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.484251, 0.0416527, -0.850794)
double_sided = false
text = "Player Info"

[node name="PlayerNameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78345, 0.0993408)
billboard = 1
text = "Player #1"
font_size = 40
outline_size = 8
